--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:create": "createdb class_survey",
-    "db:destroy": "dropdb class_survey",
-    "db:init": "psql -f schema.sql class_survey",
-    "db:seed": "psql -f seed.sql class_survey",
+    "db:create": "createdb tv_shows",
+    "db:destroy": "dropdb tv_shows",
+    "db:init": "psql -f schema.sql tv_shows",
+    "db:seed": "psql -f seed.sql tv_shows",
     "db:reset": "npm run db:destroy; npm run db:create && npm run db:init && npm run db:seed",
     "start": "node app.js",
     "dev": "nodemon app.js"
